[fix doc] CFP is not open ... yet!

--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,7 @@
         <meta itemprop="endDate" content="2014-05-06">
         <meta itemprop="location" content="New York City">
         <h1><span>May 5th and 6th, 2014</span> | <span>New York City</span></h1>
-        <h2>Early Bird Tickets on January 22nd</h2>
-        <h2>CFP Open</h2>
+        <h2>Early Bird Tickets and CFP on January 22nd</h2>
       </div>
 
 
