[ux] Add organizers.

--- a/public/index.html
+++ b/public/index.html
@@ -48,14 +48,20 @@
       </div>
 
 
-<!--       <div class="contacts" id="contacts">
+      <div class="contacts" id="contacts">
 
-        <h1>Made with <3 in New York</h1>
-
-        <div class="contact">
-        </div>
+        <p>Made with &lt;3 in New York by:
+          <span><a href="http://github.com/indexzero">@indexzero</a>, </span>
+          <span><a href="http://github.com/buritica">@buritica</a>, </span>
+          <span><a href="http://github.com/justinjmoses">@justinjmoses</a>, </span>
+          <span><a href="http://github.com/lopezcatherine">@lopezcatherine</a>, </span>
+          <span><a href="http://github.com/sarajo">@sarajo</a>, </span>
+          <span><a href="http://github.com/brianloveswords">@brianloveswords</a>, </span>
+          <span><a href="http://github.com/ajpiano">@ajpiano</a>, </span>
+          <span><a href="http://github.com/joemccann">@joemccann</a></span>
+        </p>
       </div>
- -->
+
 
     <footer>
     </footer>
