[doc] Early bird tickets are sold out!

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,8 @@
 
       <div id="action" class="action">
         <h2>
-          <a href="https://ti.to/empirejs/empirejs-2014">Early Bird Tickets available on Tito</a>
+          <a href="https://ti.to/empirejs/empirejs-2014">Early Bird Tickets SOLD OUT on Tito</a>
+          <p>More tickets soon!</p>
         </h2>
 
         <div id="call-for">
@@ -72,7 +73,7 @@
             </h2>
           </div>
 
-          <div style="margin: 0 50px 0 150px; clear:both">
+          <div style="margin: 0 50px 30px 150px; clear:both">
             now open!
           </div>
         </div>
