--- a/public/index.html
+++ b/public/index.html
@@ -17,20 +17,17 @@
 </head>
 <body>
   <div id="container">
-    <!-- NAVIGATION -->
     <nav id="page-nav" class="alt">
       <div>
-        <!-- <ul>
-          <li class="active"><a href="#/welcome" title="Welcome"><img src="img/favicon.ico" width="40" height="40" /></a></li>
-          <li><a href="#/information" title="Information">Information</a></li>
-          <li><a href="#/speakers" title="Speakers">Speakers</a></li>
-          <li><a href="#/schedule" title="Schedule">Schedule</a></li>
-          <li><a href="#/sponsors" title="Sponsors">Sponsors</a></li>
-          <li><a href="https://tito.io/empirejs/empirejs-2012" title="Tickets">Tickets</a></li>
-          <li><a href="#/contacts" title="Contacts">Contacts</a></li>
-        </ul> -->
+        <ul>
+          <li><a href="/#/information" title="Information">Information</a></li>
+          <li><a href="/#/speakers" title="Speakers">Speakers</a></li>
+          <li><a href="/#/sponsors" title="Sponsors">Sponsors</a></li>
+          <li><a href="https://tito.io/empirejs/empirejs-2014" title="Tickets">Tickets</a></li>
+          <li><a href="/#/love" title="Contacts">&lt;3</a></li>
+        </ul>
       </div>
-    </nav><!-- /nav -->
+    </nav>
 
     <div id="main" itemscope itemtype="http://schema.org/Event">
       <div id="welcome">
@@ -43,40 +40,14 @@
         <meta itemprop="startDate" content="2014-05-05">
         <meta itemprop="endDate" content="2014-05-06">
         <meta itemprop="location" content="New York City">
-        <h1><span>May 5th and 6th, 2014</span> | <span>New York City</span></h1>
+        <h1 id="/information"><span>May 5th and 6th, 2014</span> | <span>New York City</span></h1>
+        <h2>Location05, 509 West 34th St.</h2>
       </div>
 
       <div id="action" class="action">
         <h2>
-          <a href="https://ti.to/empirejs/empirejs-2014">Early Bird Tickets SOLD OUT on Tito</a>
-          <p>More tickets soon!</p>
+          <a href="https://ti.to/empirejs/empirejs-2014">Regular Tickets available on Tito</a>
         </h2>
-
-        <div id="call-for">
-          <div style="width: 300px;">
-            <h2>
-              <a style="color: #3097b1" href="https://docs.google.com/forms/d/1h0EEcAG67zB8RA7kJZAVYW9u95ZDch1hZBxIogNMRaw/viewform">
-                Call for Speakers
-              </a>
-            </h2>
-          </div>
-
-          <div style="width: 100px">
-            and
-          </div>
-
-          <div >
-            <h2>
-              <a style="color: #b4d183" href="https://docs.google.com/forms/d/1Z6RydhVE3auFxCxBaQXcookugxv1Ruuh2UHpn1Q7UFo/viewform">
-                Inverse Call for Speakers
-              </a>
-            </h2>
-          </div>
-
-          <div style="margin: 0 50px 30px 150px; clear:both">
-            now open!
-          </div>
-        </div>
       </div>
 
       <div id="why" class="why">
@@ -90,19 +61,41 @@ console.log("... It’s Computer SCIENCE.");
         </code></pre>
 
         <p>
-          We have not selected a venue yet, but rest assured that information is coming soon.
-          The dates are firm so mark your calendar and get ready for some awesome times.
-        </p>
-
-        <p>
           Need more convincing? Just <a href="https://cloudup.com/czFplm1P8SG">check out</a>
           the <a href="https://cloudup.com/cDmmCWzW9WT">photos from</a>
           <a href="https://cloudup.com/cLjmhHbt3Uq">EmpireJS 2012</a>
         </p>
       </div>
 
+      <div id="speakers" class="content">
+        <div class="subheader">
+          <h1>Speakers</h1>
+          <div style="text-align: right">
+            <p>... More announced every week!</p>
+          </div>
+        </div>
 
-      <div class="contacts" id="contacts">
+        <div class="speakers">
+          <div><img src="/img/speakers/john-resig.jpg" alt /><p>John Resig</p></div>
+          <div><img src="/img/speakers/jenn-schiffer.jpg" alt /><p>Jenn Schiffer</p></div>
+        </div>
+
+
+      </div>
+
+      <div id="sponsors" class="content">
+        <div class="subheader">
+          <h1>Sponsors</h1>
+        </div>
+
+        <div class="sponsors">
+          <a href="http://bloomberg.com/"><img width="400" src="img/sponsors/bloomberg.png" alt /></a>
+          <a href="http://condenast.com/"><img width="400" src="img/sponsors/condenast.png" alt /></a>
+          <a href="http://saucelabs.com/"><img width="250" src="img/sponsors/saucelabs.png" alt /></a>
+        </div>
+      </div>
+
+      <div class="contacts" id="love">
         <p>Made with &lt;3 in New York by:
           <span><a href="http://github.com/indexzero">@indexzero</a>, </span>
           <span><a href="http://github.com/buritica">@buritica</a>, </span>
@@ -111,7 +104,7 @@ console.log("... It’s Computer SCIENCE.");
           <span><a href="http://github.com/sarajo">@sarajo</a>, </span>
           <span><a href="http://github.com/brianloveswords">@brianloveswords</a>, </span>
           <span><a href="http://github.com/ajpiano">@ajpiano</a>, </span>
-          <span><a href="http://github.com/joemccann">@joemccann</a></span>
+          <span><a href="http://github.com/copasetickid">@copasetickid</a></span>
         </p>
       </div>
 
