[ux doc] Added Vince Allen, DigitalOcean, New York Times, and a COC.

--- a/public/index.html
+++ b/public/index.html
@@ -76,8 +76,21 @@ console.log("... It’s Computer SCIENCE.");
         </div>
 
         <div class="speakers">
-          <div><img src="/img/speakers/john-resig.jpg" alt /><p>John Resig</p></div>
-          <div><img src="/img/speakers/jenn-schiffer.jpg" alt /><p>Jenn Schiffer</p></div>
+          <div>
+            <a href="https://github.com/jeresig" target="_blank">
+              <img src="/img/speakers/john-resig.jpg" alt /><p>John Resig</p>
+            </a>
+          </div>
+          <div>
+            <a href="https://github.com/jennschiffer" target="_blank">
+              <img src="/img/speakers/jenn-schiffer.jpg" alt /><p>Jenn Schiffer</p>
+            </a>
+          </div>
+          <div>
+            <a href="https://github.com/foldi" target="_blank">
+              <img src="/img/speakers/vince-allen.jpg" alt /><p>Vince Allen</p>
+            </a>
+          </div>
         </div>
 
 
@@ -91,9 +104,20 @@ console.log("... It’s Computer SCIENCE.");
         <div class="sponsors">
           <a href="http://bloomberg.com/"><img width="400" src="img/sponsors/bloomberg.png" alt /></a>
           <a href="http://condenast.com/"><img width="400" src="img/sponsors/condenast.png" alt /></a>
+          <a href="http://digitalocean.com/"><img width="400" src="img/sponsors/digitalocean.png" alt /></a>
           <a href="http://saucelabs.com/"><img width="250" src="img/sponsors/saucelabs.png" alt /></a>
+          <a href="http://nytimes.com/"><img width="250" src="img/sponsors/nytimes.png" alt /></a>
         </div>
       </div>
+
+      <div id="coc" class="content">
+        <div class="subheader">
+          <h1>NYC = No Yutzes Central</h1>
+        </div>
+
+        By attending EmpireJS you agree not to be <a style="text-decoration: underline" href="http://www.urbandictionary.com/define.php?term=yutz">a yutz.</a> Harassment of any kind will be dealt with zero tolerance. We'd like to thank our friends at JSConf for the longer, less yiddish filled <a style="text-decoration: underline" href="http://jsconf.com/codeofconduct.html">Code of Conduct</a> we happily uphold.
+      </div>
+
 
       <div class="contacts" id="love">
         <p>Made with &lt;3 in New York by:
