[doc] Minor copy change.

--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@ console.log("... It’s Computer SCIENCE.");
           <h1>NYC = No Yutzes Central</h1>
         </div>
 
-        By attending EmpireJS you agree not to be <a style="text-decoration: underline" href="http://www.urbandictionary.com/define.php?term=yutz">a yutz.</a> Harassment of any kind will be dealt with zero tolerance. We'd like to thank our friends at JSConf for the longer, less yiddish filled <a style="text-decoration: underline" href="http://jsconf.com/codeofconduct.html">Code of Conduct</a> we happily uphold.
+        By attending EmpireJS you agree not to be <a style="text-decoration: underline" href="http://www.urbandictionary.com/define.php?term=yutz">a yutz.</a> Harassment of any kind will not be tolerated. We'd like to thank our friends at JSConf for the longer, less yiddish filled <a style="text-decoration: underline" href="http://jsconf.com/codeofconduct.html">Code of Conduct</a> we happily uphold.
       </div>
 
 
