[doc] Added Guillermo and Alyssa.

--- a/public/index.html
+++ b/public/index.html
@@ -91,6 +91,16 @@ console.log("... It’s Computer SCIENCE.");
               <img src="/img/speakers/vince-allen.jpg" alt /><p>Vince Allen</p>
             </a>
           </div>
+          <div>
+            <a href="https://github.com/rauchg" target="_blank">
+              <img src="/img/speakers/guillermo-rauch.jpg" alt /><p>Guillermo Rauch</p>
+            </a>
+          </div>
+          <div>
+            <a href="https://github.com/alyraz" target="_blank">
+              <img src="/img/speakers/alyssa-ravasio.jpg" alt /><p>Alyssa Ravasio</p>
+            </a>
+          </div>
         </div>
 
 
@@ -158,5 +168,17 @@ console.log("... It’s Computer SCIENCE.");
   </script>
 
 
+<script id="IntercomSettingsScriptTag">
+  window.intercomSettings = {
+    // TODO: The current logged in user's full name
+    name: "Charlie Robbins",
+    // TODO: The current logged in user's email address.
+    email: "charlie@nodejitsu.com",
+    // TODO: The current logged in user's sign-up date as a Unix timestamp.
+    created_at: 1281240000000,
+    app_id: "4245b37834989badb426d650933016892476cf96"
+  };
+</script>
+<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://static.intercomcdn.com/intercom.v1.js';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
 </body>
 </html>
