[fix] Properly scroll to <3 link.

--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,7 @@ console.log("... It’s Computer SCIENCE.");
         </div>
       </div>
 
-      <div id="coc" class="content">
+      <div id="love" class="content">
         <div class="subheader">
           <h1>NYC = No Yutzes Central</h1>
         </div>
@@ -129,7 +129,7 @@ console.log("... It’s Computer SCIENCE.");
       </div>
 
 
-      <div class="contacts" id="love">
+      <div class="contacts">
         <p>Made with &lt;3 in New York by:
           <span><a href="http://github.com/indexzero">@indexzero</a>, </span>
           <span><a href="http://github.com/buritica">@buritica</a>, </span>
@@ -159,7 +159,7 @@ console.log("... It’s Computer SCIENCE.");
     , '/speakers': run_route
     , '/schedule': run_route
     , '/sponsors': run_route
-    , '/contacts': run_route
+    , '/love': run_route
     }
 
     var router = Router(routes)
