[doc fix] Update avatar and link for Guillermo.

--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@ console.log("... It’s Computer SCIENCE.");
             </a>
           </div>
           <div>
-            <a href="https://github.com/rauchg" target="_blank">
+            <a href="https://twitter.com/rauchg" target="_blank">
               <img src="/img/speakers/guillermo-rauch.jpg" alt /><p>Guillermo Rauch</p>
             </a>
           </div>
