--- a/public/index.html
+++ b/public/index.html
@@ -114,6 +114,7 @@ console.log("... It’s Computer SCIENCE.");
         <div class="sponsors">
           <a href="http://bloomberg.com/"><img width="400" src="img/sponsors/bloomberg.png" alt /></a>
           <a href="http://condenast.com/"><img width="400" src="img/sponsors/condenast.png" alt /></a>
+          <a href="http://bazaarvoice.com/"><img width="136" src="img/sponsors/bazaarvoice.png" alt /></a>
           <a href="http://digitalocean.com/"><img width="400" src="img/sponsors/digitalocean.png" alt /></a>
           <a href="http://saucelabs.com/"><img width="250" src="img/sponsors/saucelabs.png" alt /></a>
           <a href="http://nytimes.com/"><img width="250" src="img/sponsors/nytimes.png" alt /></a>
