[doc] Added Trevor Landau

--- a/public/index.html
+++ b/public/index.html
@@ -101,9 +101,12 @@ console.log("... It’s Computer SCIENCE.");
               <img src="/img/speakers/alyssa-ravasio.jpg" alt /><p>Alyssa Ravasio</p>
             </a>
           </div>
+          <div>
+            <a href="https://github.com/trevor_landau" target="_blank">
+              <img src="/img/speakers/trevor-landau.jpg" alt /><p>Trevor Landau</p>
+            </a>
+          </div>
         </div>
-
-
       </div>
 
       <div id="sponsors" class="content">
