[fix] Update Trevor's Github handle.

--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@ console.log("... It’s Computer SCIENCE.");
             </a>
           </div>
           <div>
-            <a href="https://github.com/trevor_landau" target="_blank">
+            <a href="https://github.com/landau" target="_blank">
               <img src="/img/speakers/trevor-landau.jpg" alt /><p>Trevor Landau</p>
             </a>
           </div>
