[doc ux] Added Adam and Alex as Hosts. Added Twitter logo.

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
           <li><a href="/#/sponsors" title="Sponsors">Sponsors</a></li>
           <li><a href="https://tito.io/empirejs/empirejs-2014" title="Tickets">Tickets</a></li>
           <li><a href="/#/love" title="Contacts">&lt;3</a></li>
+          <li><a href="https://twitter.com/empirejs" title="Twitter" style="padding-top:30px"><img src="/img/twitter.png" height="20px" /></a></li>
         </ul>
       </div>
     </nav>
@@ -71,7 +72,7 @@ console.log("... It’s Computer SCIENCE.");
         <div class="subheader">
           <h1>Speakers</h1>
           <div style="text-align: right">
-            <p>... More announced every week!</p>
+            <p>... 18 more to be announced. One every day!</p>
           </div>
         </div>
 
@@ -104,6 +105,25 @@ console.log("... It’s Computer SCIENCE.");
           <div>
             <a href="https://github.com/landau" target="_blank">
               <img src="/img/speakers/trevor-landau.jpg" alt /><p>Trevor Landau</p>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div id="hosts" class="content">
+        <div class="subheader">
+          <h1>Hosted by</h1>
+        </div>
+
+        <div class="speakers hosts">
+          <div>
+            <a href="https://twitter.com/slexaxton" target="_blank">
+              <img src="/img/speakers/alex-sexton.jpg" alt /><p>Alex Sexton</p>
+            </a>
+          </div>
+          <div>
+            <a href="https://twitter.com/ajpiano" target="_blank">
+              <img src="/img/speakers/adam-sontag.jpg" alt /><p>Adam Sontag</p>
             </a>
           </div>
         </div>
