[fix] Update meta in <head> for 2014

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>EmpireJS</title>
-    <meta name="description" content="A one-day Javascript conference in NYC, showcasing the best of what the Javascript community has to offer.">
+    <meta name="description" content="Two-days. One-track. May 5-6 in New York City. All Javascript. Tickets on Sale Now!">
     <meta name="viewport" content="width=device-width">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:600,800' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
