[doc] Added our newest sponsors: Etsy and Work-Bench!

--- a/public/index.html
+++ b/public/index.html
@@ -138,9 +138,11 @@ console.log("... It’s Computer SCIENCE.");
           <a href="http://bloomberg.com/"><img width="400" src="img/sponsors/bloomberg.png" alt /></a>
           <a href="http://condenast.com/"><img width="400" src="img/sponsors/condenast.png" alt /></a>
           <a href="http://bazaarvoice.com/"><img width="136" src="img/sponsors/bazaarvoice.png" alt /></a>
+          <a href="http://etsy.com/"><img width="300" src="img/sponsors/etsy.png" alt /></a>
           <a href="http://digitalocean.com/"><img width="400" src="img/sponsors/digitalocean.png" alt /></a>
           <a href="http://saucelabs.com/"><img width="250" src="img/sponsors/saucelabs.png" alt /></a>
           <a href="http://nytimes.com/"><img width="250" src="img/sponsors/nytimes.png" alt /></a>
+          <a href="http://work-bench.com/"><img width="250" src="img/sponsors/work-bench.png" alt /></a>
         </div>
       </div>
 
