[fix] target="_blank" all the things. Fix scroll to ID.

--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,9 @@
           <li><a href="/#/information" title="Information">Information</a></li>
           <li><a href="/#/speakers" title="Speakers">Speakers</a></li>
           <li><a href="/#/sponsors" title="Sponsors">Sponsors</a></li>
-          <li><a href="https://tito.io/empirejs/empirejs-2014" title="Tickets">Tickets</a></li>
+          <li><a href="https://tito.io/empirejs/empirejs-2014" title="Tickets" target="_blank">Tickets</a></li>
           <li><a href="/#/love" title="Contacts">&lt;3</a></li>
-          <li><a href="https://twitter.com/empirejs" title="Twitter" style="padding-top:30px"><img src="/img/twitter.png" height="20px" /></a></li>
+          <li><a href="https://twitter.com/empirejs" title="Twitter" style="padding-top:30px" target="_blank"><img src="/img/twitter.png" height="20px" /></a></li>
         </ul>
       </div>
     </nav>
@@ -51,7 +51,7 @@
         </h2>
       </div>
 
-      <div id="why" class="why">
+      <div id="information" class="why">
         <p>
           We are back again! Bringing you speakers on cutting edge of Javascript: in the Browser,
           on the Server, with robots and hardware, and in ways we don’t even know yet!
@@ -135,14 +135,14 @@ console.log("... It’s Computer SCIENCE.");
         </div>
 
         <div class="sponsors">
-          <a href="http://bloomberg.com/"><img width="400" src="img/sponsors/bloomberg.png" alt /></a>
-          <a href="http://condenast.com/"><img width="400" src="img/sponsors/condenast.png" alt /></a>
-          <a href="http://bazaarvoice.com/"><img width="136" src="img/sponsors/bazaarvoice.png" alt /></a>
-          <a href="http://etsy.com/"><img width="300" src="img/sponsors/etsy.png" alt /></a>
-          <a href="http://digitalocean.com/"><img width="400" src="img/sponsors/digitalocean.png" alt /></a>
-          <a href="http://saucelabs.com/"><img width="250" src="img/sponsors/saucelabs.png" alt /></a>
-          <a href="http://nytimes.com/"><img width="250" src="img/sponsors/nytimes.png" alt /></a>
-          <a href="http://work-bench.com/"><img width="250" src="img/sponsors/work-bench.png" alt /></a>
+          <a href="http://bloomberg.com/" target="_blank"><img width="400" src="img/sponsors/bloomberg.png" alt /></a>
+          <a href="http://condenast.com/" target="_blank"><img width="400" src="img/sponsors/condenast.png" alt /></a>
+          <a href="http://bazaarvoice.com/" target="_blank"><img width="136" src="img/sponsors/bazaarvoice.png" alt /></a>
+          <a href="http://etsy.com/" target="_blank"><img width="300" src="img/sponsors/etsy.png" alt /></a>
+          <a href="http://digitalocean.com/" target="_blank"><img width="400" src="img/sponsors/digitalocean.png" alt /></a>
+          <a href="http://saucelabs.com/" target="_blank"><img width="250" src="img/sponsors/saucelabs.png" alt /></a>
+          <a href="http://nytimes.com/" target="_blank"><img width="250" src="img/sponsors/nytimes.png" alt /></a>
+          <a href="http://work-bench.com/" target="_blank"><img width="250" src="img/sponsors/work-bench.png" alt /></a>
         </div>
       </div>
 
@@ -157,20 +157,16 @@ console.log("... It’s Computer SCIENCE.");
 
       <div class="contacts">
         <p>Made with &lt;3 in New York by:
-          <span><a href="http://github.com/indexzero">@indexzero</a>, </span>
-          <span><a href="http://github.com/buritica">@buritica</a>, </span>
-          <span><a href="http://github.com/justinjmoses">@justinjmoses</a>, </span>
-          <span><a href="http://github.com/lopezcatherine">@lopezcatherine</a>, </span>
-          <span><a href="http://github.com/sarajo">@sarajo</a>, </span>
-          <span><a href="http://github.com/brianloveswords">@brianloveswords</a>, </span>
-          <span><a href="http://github.com/ajpiano">@ajpiano</a>, </span>
-          <span><a href="http://github.com/copasetickid">@copasetickid</a></span>
+          <span><a href="http://github.com/indexzero" target="_blank">@indexzero</a>, </span>
+          <span><a href="http://github.com/buritica" target="_blank">@buritica</a>, </span>
+          <span><a href="http://github.com/justinjmoses" target="_blank">@justinjmoses</a>, </span>
+          <span><a href="http://github.com/lopezcatherine" target="_blank">@lopezcatherine</a>, </span>
+          <span><a href="http://github.com/sarajo" target="_blank">@sarajo</a>, </span>
+          <span><a href="http://github.com/brianloveswords" target="_blank">@brianloveswords</a>, </span>
+          <span><a href="http://github.com/ajpiano" target="_blank">@ajpiano</a>, </span>
+          <span><a href="http://github.com/copasetickid" target="_blank">@copasetickid</a></span>
         </p>
       </div>
-
-
-    <footer>
-    </footer>
   </div>
 
   <script>
