[dist] Version bump. 1.4.2

--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@ console.log("... It’s Computer SCIENCE.");
         <div class="subheader">
           <h1>Speakers</h1>
           <div style="text-align: right">
-            <p>... 18 more to be announced. One every day!</p>
+            <p>... 17 more to be announced. <strong>One every day!</strong></p>
           </div>
         </div>
 
@@ -105,6 +105,11 @@ console.log("... It’s Computer SCIENCE.");
           <div>
             <a href="https://github.com/landau" target="_blank">
               <img src="/img/speakers/trevor-landau.jpg" alt /><p>Trevor Landau</p>
+            </a>
+          </div>
+          <div>
+            <a href="https://twitter.com/amasad" target="_blank">
+              <img src="/img/speakers/amjad-masad.jpg" alt /><p>Amjad Masad</p>
             </a>
           </div>
         </div>
