[doc] Added Mark Wunsch

--- a/public/index.html
+++ b/public/index.html
@@ -112,6 +112,11 @@ console.log("... It’s Computer SCIENCE.");
               <img src="/img/speakers/amjad-masad.jpg" alt /><p>Amjad Masad</p>
             </a>
           </div>
+          <div>
+            <a href="https://twitter.com/markwunsch" target="_blank">
+              <img src="/img/speakers/mark-wunsch.jpg" alt /><p>Mark Wunsch</p>
+            </a>
+          </div>
         </div>
       </div>
 
