[doc] Added Drew Petersen

--- a/public/index.html
+++ b/public/index.html
@@ -117,6 +117,11 @@ console.log("... It’s Computer SCIENCE.");
               <img src="/img/speakers/mark-wunsch.jpg" alt /><p>Mark Wunsch</p>
             </a>
           </div>
+          <div>
+            <a href="https://twitter.com/kirbysayshi" target="_blank">
+              <img src="/img/speakers/drew-petersen.jpg" alt /><p>Drew Petersen</p>
+            </a>
+          </div>
         </div>
       </div>
 
