[doc] Added Eric Shepherd

--- a/public/index.html
+++ b/public/index.html
@@ -122,6 +122,11 @@ console.log("... It’s Computer SCIENCE.");
               <img src="/img/speakers/drew-petersen.jpg" alt /><p>Drew Petersen</p>
             </a>
           </div>
+          <div>
+            <a href="https://twitter.com/arkitrave" target="_blank">
+              <img src="/img/speakers/eric-shepherd.jpg" alt /><p>Eric Shepherd</p>
+            </a>
+          </div>
         </div>
       </div>
 
