--- a/public/index.html
+++ b/public/index.html
@@ -159,6 +159,8 @@ console.log("... It’s Computer SCIENCE.");
           <a href="http://condenast.com/" target="_blank"><img width="400" src="img/sponsors/condenast.png" alt /></a>
           <a href="http://bazaarvoice.com/" target="_blank"><img width="136" src="img/sponsors/bazaarvoice.png" alt /></a>
           <a href="http://etsy.com/" target="_blank"><img width="300" src="img/sponsors/etsy.png" alt /></a>
+          <a href="http://automattic.com/" target="_blank"><img width="400" src="img/sponsors/automattic.png" alt /></a>
+
           <a href="http://digitalocean.com/" target="_blank"><img width="400" src="img/sponsors/digitalocean.png" alt /></a>
           <a href="http://saucelabs.com/" target="_blank"><img width="250" src="img/sponsors/saucelabs.png" alt /></a>
           <a href="http://nytimes.com/" target="_blank"><img width="250" src="img/sponsors/nytimes.png" alt /></a>
