[doc] Added Spotify as a sponsor.

--- a/public/index.html
+++ b/public/index.html
@@ -163,6 +163,7 @@ console.log("... It’s Computer SCIENCE.");
 
           <a href="http://digitalocean.com/" target="_blank"><img width="400" src="img/sponsors/digitalocean.png" alt /></a>
           <a href="http://saucelabs.com/" target="_blank"><img width="250" src="img/sponsors/saucelabs.png" alt /></a>
+          <a href="http://spotify.com/" target="_blank"><img width="300" src="img/sponsors/spotify.png" alt /></a>
           <a href="http://nytimes.com/" target="_blank"><img width="250" src="img/sponsors/nytimes.png" alt /></a>
           <a href="http://work-bench.com/" target="_blank"><img width="250" src="img/sponsors/work-bench.png" alt /></a>
         </div>
