[doc] Added Arnout.

--- a/public/index.html
+++ b/public/index.html
@@ -127,6 +127,11 @@ console.log("... It’s Computer SCIENCE.");
               <img src="/img/speakers/eric-shepherd.jpg" alt /><p>Eric Shepherd</p>
             </a>
           </div>
+          <div>
+            <a href="https://twitter.com/3rdeden" target="_blank">
+              <img src="/img/speakers/arnout-kazemier.jpg" alt /><p>Arnout Kazemier</p>
+            </a>
+          </div>
         </div>
       </div>
 
