[doc] Adding schedule

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
           <li><a href="/#/information" title="Information">Information</a></li>
           <li><a href="/#/speakers" title="Speakers">Speakers</a></li>
           <li><a href="/#/sponsors" title="Sponsors">Sponsors</a></li>
+          <li><a href="/#/schedule" title="Schedule">Schedule</a></li>
           <li><a href="https://tito.io/empirejs/empirejs-2014" title="Tickets" target="_blank">Tickets</a></li>
           <li><a href="/#/love" title="Contacts">&lt;3</a></li>
           <li><a href="https://twitter.com/empirejs" title="Twitter" style="padding-top:30px" target="_blank"><img src="/img/twitter.png" height="20px" /></a></li>
@@ -173,6 +174,140 @@ console.log("... It’s Computer SCIENCE.");
           <a href="http://work-bench.com/" target="_blank"><img width="250" src="img/sponsors/work-bench.png" alt /></a>
         </div>
       </div>
+
+      <div id="schedule" class="content">
+        <div class="subheader">
+          <h1>Schedule</h1>
+        </div>
+
+        <div class="schedule">
+          <table>
+          <thead>
+            <tr><th>Time</th><th>Monday (Day 1)</th><th>Tuesday (Day 2)</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>800</td><td><registration></registration></td><td><breakfast></breakfast></td>
+            </tr>
+            <tr>
+              <td>900</td>
+              <td>
+              <img src="/img/speakers/jenn-schiffer.jpg" />
+                <talk>Sorting Algorithms in Javascript</talk>
+                <speaker><a href="http://twitter.com/jennschiffer" target="_blank">Jenn Schiffer</a></speaker>
+              </td>
+              <td><tbd></tbd></td>
+            </tr>
+            <tr>
+              <td>940</td>
+              <td>
+                <img src="/img/speakers/trevor-landau.jpg" />
+                <talk>Anatomy of a Successful Module</talk>
+                <speaker><a href="http://twitter.com/trevor_landau" target="_blank">Trevor Landau</a></speaker>
+              </td>
+              <td><tbd></tbd></td>
+            </tr>
+            <tr>
+              <td>1020</td><td><tbd></tbd></td><td><tbd></tbd></td>
+            </tr>
+            <tr>
+              <td>1100</td>
+              <td><tbd></tbd></td>
+              <td>
+                <img src="/img/speakers/alyssa-ravasio.jpg" />
+                <talk>Hacking Webforms with Phantom.js</talk>
+                <speaker><a href="http://twitter.com/alyraz" target="_blank">Alyssa Ravasio</a></speaker>
+              </td>
+            </tr>
+            <tr>
+              <td>1140</td>
+              <td>
+                <img src="/img/speakers/drew-petersen.jpg" />
+                <talk>Exploiting a Pocket Universe</talk>
+                <speaker><a href="http://twitter.com/KirbySaysHi" target="_blank">Drew Petersen</a></speaker>
+              </td>
+              <td>
+                <img src="/img/speakers/guillermo-rauch.jpg" />
+                <talk>MyDB</talk>
+                <speaker><a href="http://twitter.com/rauchg" target="_blank">Guillermo Rauch</a></speaker>
+              </td>
+            </tr>
+            <tr>
+               <td>1210</td><td><lunch></lunch></td><td><lunch></lunch></td>
+            </tr>
+            <tr>
+              <td>1310</td>
+              <td><tbd></tbd></td>
+              <td>
+                <img src="/img/speakers/arnout-kazemier.jpg" />
+                <talk>BigPipe</talk>
+                <speaker><a href="http://twitter.com/3rdEden" target="_blank">Arnout Kazemier</a></speaker>
+              </td>
+            </tr>
+            <tr>
+               <td>1350</td><td><tbd></tbd></td><td><tbd></tbd></td>
+            </tr>
+            <tr>
+               <td>1430</td>
+               <td><tbd></tbd></td>
+               <td>
+                  <img src="/img/speakers/john-resig.jpg" />
+                  <talk>Hacking Art with Node.js and Image Analysis</talk>
+                  <speaker><a href="http://twitter.com/jeresig" target="_blank">John Resig</a></speaker>
+                </td>
+            </tr>
+            <tr>
+               <td>1500</td><td><coffee></coffee></td><td><coffee></coffee></td>
+            </tr>
+            <tr>
+                <td>1530</td>
+                <td>
+                  <img src="/img/speakers/mark-wunsch.jpg" />
+                  <talk>Front-end Style Guides and Greenfields</talk>
+                  <speaker><a href="http://twitter.com/markwunsch" target="_blank">Mark Wunsch</a></speaker>
+                </td>
+                <td><tbd></tbd></td>
+            </tr>
+            <tr>
+                <td>1610</td>
+                <td>
+                  <img src="/img/speakers/eric-shepherd.jpg" />
+                  <talk>Gadgets for Holistic Web Detection</talk>
+                  <speaker><a href="http://twitter.com/arkitrave" target="_blank">Eric Shepherd</a></speaker>
+                </td>
+                <td><tbd></tbd></td>
+            </tr>
+            <tr>
+                <td>1650</td>
+                <td>
+                  <img src="/img/speakers/amjad-masad.jpg" />
+                  <talk>Lesser Known Debugging Techniques</talk>
+                  <speaker>
+                    <a href="http://twitter.com/amasad" target="_blank">Amjad Masad</a>
+                  </speaker>
+                </td>
+                <td><tbd></tbd></td>
+            </tr>
+            <tr>
+                <td>1730</td>
+                <td>
+                  <img src="/img/speakers/vince-allen.jpg" />
+                  <talk>Pixel Art in Javascript</talk>
+                  <speaker><a href="http://twitter.com/foldi" target="_blank">Vince Allen</a></speaker>
+                </td>
+                <td><tbd></tbd></td>
+            </tr>
+            <tr>
+                <td>1800</td>
+                <td><party /></td>
+                <td></td>
+            </tr>
+          </tbody>
+          </table>
+        </div>
+      </div>
+
 
       <div id="love" class="content">
         <div class="subheader">
